# phoenix

./: Cargo.toml  query.http  test.http
crates/catalog/: Cargo.toml
crates/catalog/src/: main.rs
crates/iceberg/: Cargo.toml
crates/iceberg/examples/: api.rs  metadata.json
crates/iceberg/src/: lib.rs  metadata.rs  partition.rs  rollback.rs  scan.rs  schema.rs  snapshot.rs  table.rs  types.rs  updates.rs
crates/iceberg/src/metadata/: mod.rs  parser.rs
crates/iceberg/src/parser/: metadata.rs  mod.rs  partition_spec.rs  schema.rs  snapshot.rs  util.rs
crates/iceberg/src/partition/: field.rs  mod.rs  spec.rs  transform.rs
crates/query/: Cargo.toml
crates/query/src/: engine.rs  main.rs
crates/write/src/: main.rs  store.rs
docs/: architecture.md
iceberg/: docker-compose.yml
lib/catalog/: Cargo.toml
lib/data/: Cargo.toml
lib/write/: Cargo.toml
lib/write/src/: main.rs  store.rs  util.rs
phoenix/: Cargo.toml
phoenix/src/: main.rs
research/iceberg/: .gitignore  README.md  docker-compose.yml
