[workspace]
members = [
    "lib/query",
    "lib/data",
    "lib/write",
    "phoenix",
]

resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
datafusion = "40.0.0"
arrow = "52.1.0"
arrow-json = "52.1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"